[tool.poetry]
name = "vercel-upload"
version = "0.1.0"
description = "This is the test project"
authors = ["Zohaib521321 <khanzohaib3231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
